# AzureSphereHacksterTTC

./: .gitignore  AvnetStarterKitReferenceDesign.sln
AvnetStarterKitReferenceDesign/: AvnetStarterKitReferenceDesign.vcxproj  AvnetStarterKitReferenceDesign.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  app_manifest.json  applibs_versions.h  azure_iot_utilities.c  azure_iot_utilities.h  build_options.h  connection_strings.h  deviceTwin.h  device_twin.c  i2c.c  i2c.h  launch.vs.json  lsm6dso_reg.c  lsm6dso_reg.h  main.c  mt3620_avnet_dev.h  mt3620_rdb.h  oled.c  oled.h
Hardware/Pre20.10-SK2 files/: Readme.txt
InterCoreCommsMT3620_BMetal/: CMakeLists.txt  CMakeSettings.json  app_manifest.json
Tools/: NOTICE.txt  ShowIoTCentralConfig.exe.config  ShowIoTCentralConfig.exemsalcache.txt
